# some-ip

./: LICENSE  README.md
project/: CMakeLists.txt  gen_src.sh
project/config/: vsomeip-client.json  vsomeip-service.json
project/fidl/: Demo.fdepl  Demo.fidl
project/patch/: patch.patch
project/script/: client.sh  service.sh
project/src/: Client.cpp  IDemoStubImpl.cpp  IDemoStubImpl.hpp  Service.cpp
project/src-gen/v1/com/microchip/: CustomTypes.hpp  CustomTypesSomeIPDeployment.cpp  CustomTypesSomeIPDeployment.hpp  IDemo.hpp  IDemoProxy.hpp  IDemoProxyBase.hpp  IDemoSomeIPDeployment.cpp  IDemoSomeIPDeployment.hpp  IDemoSomeIPProxy.cpp  IDemoSomeIPProxy.hpp  IDemoSomeIPStubAdapter.cpp  IDemoSomeIPStubAdapter.hpp  IDemoStub.hpp  IDemoStubDefault.cpp  IDemoStubDefault.hpp
vsomeip/implementation/configuration/include/: internal.hpp
